# synh8

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  KEYBINDINGS-SPEC.md  LICENSE  LLM.md  PERF-FILTERSWITCH.md  PERF-RENDERING.md  README.md  TODO.md
src/: app.rs  apt.rs  core.rs  main.rs  progress.rs  types.rs  ui.rs
