[package]
name = "synh8"
version = "0.1.0"
edition = "2024"
description = "A synaptic-inspired TUI for apt management."
rust-version = "1.92"

[dependencies]
ratatui = "0.30"
crossterm = "0.28"
color-eyre = "0.6"
rust-apt = "0.9"
rusqlite = { version = "0.39.0", features = ["bundled"] }
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hotpath = "0.14"

[features]
hotpath = ["hotpath/hotpath"]
hotpath-alloc = ["hotpath/hotpath", "hotpath/hotpath-alloc"]

[[bin]]
name = "synh8"
path = "src/main.rs"

[[bin]]
name = "debug_cli"
path = "src/bin/debug_cli.rs"

[lints.clippy]
# Style
uninlined_format_args = "deny"
cloned_instead_of_copied = "deny"
redundant_closure_for_method_calls = "deny"
semicolon_if_nothing_returned = "deny"
manual_string_new = "deny"
explicit_iter_loop = "deny"
implicit_clone = "deny"
needless_borrow = "deny"
redundant_locals = "deny"

# Correctness
collapsible_match = "deny"
if_same_then_else = "deny"
unnecessary_unwrap = "deny"
wrong_self_convention = "deny"
let_underscore_must_use = "deny"
ok_expect = "deny"
await_holding_lock = "deny"
await_holding_refcell_ref = "deny"
clone_on_ref_ptr = "deny"
float_cmp = "deny"
regex_creation_in_loops = "deny"

# Performance
unnecessary_sort_by = "deny"

# API design
ptr_arg = "deny"
